--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <img class="odinlogo" src="odin-lined.png">
                <p>OdinProject</p>
            </div>
+           <p class="credit"></p>
        </div>
        <div class="container-right">
            <div class="textbox">
@@ -23,41 +24,44 @@
            </div>
            <div class="form">
                <h1>Call To Action</h1>
-               <form action="" method="post"> 
+               <form method="post" action="#"> 
                     <div class="input">
                         <label for="firstname">First Name</label>
-                        <input type="text" id="firstname" name="name" required>
+                        <input type="text" id="firstname" name="firstname" required autocomplete="off">
                     </div>
                     <div class="input">
                         <label for="lastname">Last Name</label>
-                        <input type="text" id="lastname" name="name" required>
+                        <input type="text" id="lastname" name="lastname" required autocomplete="off">
                     </div>
 
                     <div class="input">
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email" autocomplete="off" required>
                     </div>
 
                     <div class="input">
                         <label for="phonenumber">Phone Number</label>
-                        <input type="number" id="phonenumber" name="phonenumber">
+                        <input type="text" id="phonenumber" name="phonenumber" autocomplete="off" title="Format number as shown: 123-456-7890" pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$">
                     </div>
 
                     <div class="input">
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required>
+                        <input type="password" id="password" name="password" required minlength="5" autocomplete="off">
                     </div>
 
                     <div class="input">
                         <label for="cpassword">Confirm Password</label>
-                        <input type="password" id="cpassword" name="cpassword" required>
+                        <input type="password" id="cpassword" name="cpassword" required minlength="5" autocomplete="off">
                     </div>
+
+                    <div class="closing">
+                        <button>Create Account</button>
+                        <p class="login">Already have an account? <a href="Login">Log in</a></p>
+                    </div>
+
                </form>
            </div>
-           <div class="closing">
-               <button type="submit">Create Account</button>
-               <p class="login">Already have an account? <a href="Login">Log in</a></p>
-           </div>
+           
        </div>
        
    </div>
